# Flickings

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: boid.hpp  loop.hpp  rand.hpp  vec.hpp
modules/: CMakeLists.txt
src/: CMakeLists.txt  boid.cpp  fpsClock.cpp  loop.cpp  rand.cpp  vec.cpp
